--- a/packages/theme/src/index.scss
+++ b/packages/theme/src/index.scss
@@ -7,13 +7,13 @@
 @use './col.scss';
 @use './display.scss';
 
-@use '../../components/Button/style/Button.scss';
-@use '../../components/Carousel/style/Carousel.scss';
-@use '../../components/Magnifier/style/Magnifier.scss';
-@use '../../components/Modal/style/Modal.scss';
-@use '../../components/Selector/style/Selector.scss';
-@use '../../components/StarsRate/style/StarsRate.scss';
-@use '../../components/TreeMenu/style/TreeMenu.scss';
+@use './components/Button.scss';
+@use './components/Carousel.scss';
+@use './components/Magnifier.scss';
+@use './components/Modal.scss';
+@use './components/Selector.scss';
+@use './components/StarsRate.scss';
+@use './components/TreeMenu.scss';
 
 // df-tool styles
 @use './layout.scss';
