--- a/lib/index.esm.css
+++ b/lib/index.esm.css
@@ -1021,7 +1021,29 @@
       .df-modal-mask #df-modal .df-modal-footer .df-modal-cancel {
         background-color: #ddd;
         color: #666; }
-set 4px 4px 6px 0 rgba(116, 125, 136, 0.3); }
+en; }
+
+.btn-9:after {
+  position: absolute;
+  content: ' ';
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #1fd1f9;
+  background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
+  transition: all 0.3s ease; }
+
+.btn-9:hover {
+  background: transparent;
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5), -4px -4px 6px 0 rgba(116, 125, 136, 0.2), inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5), inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3);
+  color: #fff; }
+
+.btn-9:hover:after {
+  -webkit-transform: scale(2) rotate(180deg);
+  transform: scale(2) rotate(180deg);
+  box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, 0.5), -4px -4px 6px 0 rgba(116, 125, 136, 0.2), inset -4px -4px 6px 0 rgba(255, 255, 255, 0.5), inset 4px 4px 6px 0 rgba(116, 125, 136, 0.3); }
 
 /* 10 */
 .btn-10 {
@@ -1277,52 +1299,6 @@ set 4px 4px 6px 0 rgba(116, 125, 136, 0.3); }
 .btn-16:active {
   top: 2px; }
 
-#df-tree-menu {
-  width: 100%;
-  background: #aaaaaa;
-  border-radius: 5px; }
-
-.df-tree-menu-item {
-  height: 50px;
-  color: #fff;
-  text-align: center;
-  line-height: 50px;
-  border-bottom: 1px solid #b9b9b9; }
-  .df-tree-menu-item a {
-    text-decoration: none;
-    color: #fff; }
-
-.df-tree-sub-menu {
-  position: relative; }
-  .df-tree-sub-menu .df-tree-sub-menu-title {
-    position: relative;
-    height: 50px;
-    color: #fff;
-    line-height: 50px;
-    text-align: center; }
-    .df-tree-sub-menu .df-tree-sub-menu-title .df-tree-sub-menu-icon {
-      position: absolute;
-      top: 0;
-      right: 15px; }
-  .df-tree-sub-menu .df-tree-sub-menu-item {
-    position: absolute;
-    left: 100%;
-    top: 0;
-    width: 100%;
-    background-color: #333; }
-
-.df-stars-iconfont {
-  color: #949494;
-  padding: 0 5px; }
-  .df-stars-iconfont.icon-star:hover {
-    color: #727272;
-    transition: color 0.3s; }
-  .df-stars-iconfont.active {
-    color: #fba906c7; }
-  .df-stars-iconfont.active:hover {
-    color: #fbab06;
-    transition: color 0.3s; }
-
 #df-selector {
   width: 300px;
   position: relative; }
@@ -1389,33 +1365,6 @@ set 4px 4px 6px 0 rgba(116, 125, 136, 0.3); }
   #df-no-data-tip i {
     font-size: 26px; }
 
-.df-mag-img-wrapper {
-  position: relative;
-  border: 1px solid #ddd; }
-
-.df-mag-img-static {
-  width: 100%;
-  height: 100%; }
-
-.df-mag-point-wrapper {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: 2;
-  background-color: #fff;
-  cursor: pointer;
-  border-radius: 50%;
-  transform: scale(1.7); }
-  .df-mag-point-wrapper.df-mag-show {
-    display: block;
-    transform: scale(1.7); }
-  .df-mag-point-wrapper .df-mag-img {
-    position: absolute;
-    top: 0;
-    left: 0; }
-
 .df-modal-mask {
   position: fixed;
   top: 0;
@@ -1478,3 +1427,42 @@ set 4px 4px 6px 0 rgba(116, 125, 136, 0.3); }
       .df-modal-mask #df-modal .df-modal-footer .df-modal-cancel {
         background-color: #ddd;
         color: #666; }
+
+.df-mag-img-wrapper {
+  position: relative;
+  border: 1px solid #ddd; }
+
+.df-mag-img-static {
+  width: 100%;
+  height: 100%; }
+
+.df-mag-point-wrapper {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 2;
+  background-color: #fff;
+  cursor: pointer;
+  border-radius: 50%;
+  transform: scale(1.7); }
+  .df-mag-point-wrapper.df-mag-show {
+    display: block;
+    transform: scale(1.7); }
+  .df-mag-point-wrapper .df-mag-img {
+    position: absolute;
+    top: 0;
+    left: 0; }
+
+.df-stars-iconfont {
+  color: #949494;
+  padding: 0 5px; }
+  .df-stars-iconfont.icon-star:hover {
+    color: #727272;
+    transition: color 0.3s; }
+  .df-stars-iconfont.active {
+    color: #fba906c7; }
+  .df-stars-iconfont.active:hover {
+    color: #fbab06;
+    transition: color 0.3s; }
