--- a/lib/index.esm.css
+++ b/lib/index.esm.css
@@ -1021,7 +1021,94 @@
       .df-modal-mask #df-modal .df-modal-footer .df-modal-cancel {
         background-color: #ddd;
         color: #666; }
-en; }
+;
+  width: 0%; }
+
+.btn-7 span:hover:before {
+  height: 100%; }
+
+.btn-7 span:hover:after {
+  width: 100%; }
+
+/* 8 */
+.btn-8 {
+  background-color: #f0ecfc;
+  background-image: linear-gradient(315deg, #f0ecfc 0%, #c797eb 74%);
+  line-height: 42px;
+  padding: 0;
+  border: none; }
+
+.btn-8 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%; }
+
+.btn-8:before,
+.btn-8:after {
+  position: absolute;
+  content: '';
+  right: 0;
+  bottom: 0;
+  background: #c797eb;
+  /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2),
+    inset -4px -4px 6px 0 rgba(255,255,255,.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+  transition: all 0.3s ease; }
+
+.btn-8:before {
+  height: 0%;
+  width: 2px; }
+
+.btn-8:after {
+  width: 0%;
+  height: 2px; }
+
+.btn-8:hover:before {
+  height: 100%; }
+
+.btn-8:hover:after {
+  width: 100%; }
+
+.btn-8:hover {
+  background: transparent; }
+
+.btn-8 span:hover {
+  color: #c797eb; }
+
+.btn-8 span:before,
+.btn-8 span:after {
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 0;
+  background: #c797eb;
+  /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+              -4px -4px 6px 0 rgba(116, 125, 136, .2),
+    inset -4px -4px 6px 0 rgba(255,255,255,.5),
+    inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+  transition: all 0.3s ease; }
+
+.btn-8 span:before {
+  width: 2px;
+  height: 0%; }
+
+.btn-8 span:after {
+  height: 2px;
+  width: 0%; }
+
+.btn-8 span:hover:before {
+  height: 100%; }
+
+.btn-8 span:hover:after {
+  width: 100%; }
+
+/* 9 */
+.btn-9 {
+  border: none;
+  transition: all 0.3s ease;
+  overflow: hidden; }
 
 .btn-9:after {
   position: absolute;
@@ -1299,72 +1386,6 @@ en; }
 .btn-16:active {
   top: 2px; }
 
-#df-selector {
-  width: 300px;
-  position: relative; }
-
-.df-selector-input-bar {
-  position: relative;
-  width: 100%;
-  height: 38px; }
-  .df-selector-input-bar .df-selector-input {
-    width: 100%;
-    height: 100%;
-    padding: 0 15px;
-    box-sizing: border-box;
-    background-color: #fff;
-    border: 1px solid #999;
-    border-radius: 5px;
-    outline: none;
-    transition: all 0.2s linear; }
-    .df-selector-input-bar .df-selector-input:focus {
-      border-color: #1890ff;
-      box-shadow: 0 0 3px #1890ff; }
-  .df-selector-input-bar .df-selector-placeholder,
-  .df-selector-input-bar .iconfont {
-    position: absolute; }
-  .df-selector-input-bar .df-selector-placeholder {
-    left: 15px;
-    top: 10px;
-    color: #999; }
-  .df-selector-input-bar .iconfont {
-    right: 15px;
-    top: 10px;
-    color: #999; }
-    .df-selector-input-bar .iconfont.icon-searchsousuo {
-      font-size: 22px;
-      top: 8px; }
-
-.df-selector-menu {
-  display: none;
-  position: absolute;
-  left: 0;
-  top: 48px;
-  width: 100%;
-  background-color: #fff;
-  box-shadow: 0 0 10px #ddd;
-  border-radius: 5px;
-  cursor: pointer; }
-  .df-selector-menu .df-selector-menu-item {
-    height: 35px;
-    text-align: center;
-    line-height: 35px;
-    font-size: 14px;
-    color: #666;
-    margin: 10px 0;
-    transition: background-color 0.2s linear; }
-    .df-selector-menu .df-selector-menu-item:hover {
-      background-color: #ededed; }
-
-#df-no-data-tip {
-  text-align: center;
-  padding: 15px 0; }
-  #df-no-data-tip span,
-  #df-no-data-tip i {
-    color: rgba(150, 150, 150, 0.7); }
-  #df-no-data-tip i {
-    font-size: 26px; }
-
 .df-modal-mask {
   position: fixed;
   top: 0;
@@ -1428,6 +1449,18 @@ en; }
         background-color: #ddd;
         color: #666; }
 
+.df-stars-iconfont {
+  color: #949494;
+  padding: 0 5px; }
+  .df-stars-iconfont.icon-star:hover {
+    color: #727272;
+    transition: color 0.3s; }
+  .df-stars-iconfont.active {
+    color: #fba906c7; }
+  .df-stars-iconfont.active:hover {
+    color: #fbab06;
+    transition: color 0.3s; }
+
 .df-mag-img-wrapper {
   position: relative;
   border: 1px solid #ddd; }
@@ -1454,15 +1487,3 @@ en; }
     position: absolute;
     top: 0;
     left: 0; }
-
-.df-stars-iconfont {
-  color: #949494;
-  padding: 0 5px; }
-  .df-stars-iconfont.icon-star:hover {
-    color: #727272;
-    transition: color 0.3s; }
-  .df-stars-iconfont.active {
-    color: #fba906c7; }
-  .df-stars-iconfont.active:hover {
-    color: #fbab06;
-    transition: color 0.3s; }
