--- a/documents/docs/.vuepress/.temp/styles/palette.scss
+++ b/documents/docs/.vuepress/.temp/styles/palette.scss
@@ -1,1 +1,1 @@
-@forward 'C:/Users/86136/Desktop/repository/different-ui/different-ui/documents/docs/.vuepress/styles/palette.scss';
+@forward 'D:/repository/different-ui/different-ui/documents/docs/.vuepress/styles/palette.scss';
